--- a/service.tracking.api/BUILD.bazel
+++ b/service.tracking.api/BUILD.bazel
@@ -4,7 +4,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "bitbucket.org/vectorhacker/pds/service.tracking.api",
+    importpath = "github.com/vectorhacker/pds/service.tracking.api",
     visibility = ["//visibility:private"],
     deps = ["//vendor/github.com/gorilla/pat:go_default_library"],
 )
